--- a/TODO.txt
+++ b/TODO.txt
@@ -40,8 +40,9 @@ If insufficient funds, display error.
 U can quit to return to item view.
 U can submit form and add bid on item.
 
- [X] Transaction: 
+ [ ] Transaction: 
 Owner U can select a bid and accept it.
+All other bids are canceled.
 Funds are moved from users.
 Item is removed.
 
@@ -75,7 +76,7 @@ U has more than $5000 in the account, conducted more than 5 transactions, and ha
 VIP receives 10% discount on each transaction, reducing the total amount they pay for purchases or rentals by 10%. 
 VIPs -instead of getting immediately suspended for complaints or low ratings- will instead get demoted.
 
- [ ] VIP demotion: 
+ [ ] VIP demolition: 
 If VIP user either has less than $5000 in account, receives a complaint, or is suspended, they are moved back to U status. S checks for any of these before reverting their status to U. 
 
  [ ] Record Access: 
